<resources>
    <string name="app_name">GoodEats</string>
    <string name="greeting_text">Hello there, Welcome Back</string>
    <string name="sign_in_prompt">Sign in to continue</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="new_user_text">New User? SIGN UP</string>
    <string name="welcome_text">Welcome Screen</string>
    <string name="welcome_screen_information_text">Welcome Screen Information</string>
    <string name="instructions_button_text">Instructions</string>
    />
</resources>
